# apa-kernel

./: .gitignore  README.md  config.py  pyproject.toml
apa_kernel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/: main.py  runtime.py
app/api/: main.py
data/: gateway_commands.json
docker/: api.Dockerfile
docs/: phase_1_plan.md
docs/phase_1/: POL_simulator.md  apa_kernel_overview.txt  apa_kernel_showcase.html  entities_justification.md  event_schemas.md  liveness_properties.md  metrics_aggreagator.md  mock_llm_performance.md  plan.md  simulator.md
frontend/: app.js  index.html  style.css
interfaces/: llm.py
kernel/adaptation/: loop.py  prompt_builder.py  schemas.py
kernel/aggregator/: aggregator.py  snapshot.py  window.py
kernel/engine/: runner.py
kernel/verification/: .gitignore  verifier.py  verify.py
scripts/: automated_batch.py  automated_run_test.py  fix_summary.py  smoke_verify_logging.py  test_gap_fixes.py  tlc_results_results.json  tlc_results_test.py  tlc_tests.md  tlc_timeout_test.py
services/llms/: azure_openai.py  gemini.py  mock.py
simulator/: arrival_process.py  event_stream.py  events.jsonl  events.py  gateway_model.py  policy.json  policy_engine.py  runner.py  transaction_engine.py  transaction_simulator.py
tests/: adaptation_test.py  aggregator_tests.py  demo_performance_test.py  llm_structured_smoke_test.py  performance_metrics.jsonl  run_counter_example.py  run_simple_scenario.py  run_verify_tests.py  sim_engine_test.py  simulator_modes.py  test_verifier_adapter.py  tests_verify.py
tests/scenario_outputs/: burst_traffic.result.json  circuit_breaker_trigger.result.json  everything_breaks.result.json  full_outage.result.json  gateway_degradation.result.json  healthy_baseline.result.json  retry_amplification.result.json  sla_breach.result.json
tests/simulator_events/: burst_traffic.jsonl  circuit_breaker_trigger.jsonl  everything_breaks.jsonl  full_outage.jsonl  healthy_baseline.jsonl  (+3 more)
(+7 files in other folders)
