[project]
name = "apa-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "pydantic",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.3",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn[standard]"
]

simulator = [
    "pandas",
    "matplotlib"
]

verification = [
    "tqdm"
]

dev = [
    "pytest",
    "ruff",
    "black",
    "mypy"
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*", "app*", "verification*"]
